--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
         "resolve-url-loader": "^3.1.0",
         "tailwindcss": "^1.8.0",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "@fullcalendar/core": "^6.1.10",
+        "@fullcalendar/daygrid": "^6.1.10",
+        "moment": "^2.30.1"
     }
 }
