--- a/compose.yaml
+++ b/compose.yaml
@@ -9,13 +9,14 @@ services:
         - GITHUB_REPO=Jersohn/School-management-systeme
     volumes:
       - ./:/var/www
+    container_name: app
     environment:
       - APP_ENV=local
       - APP_DEBUG=true
       - DB_HOST=db
       - DB_DATABASE=school_management
       - DB_USERNAME=root
-      - DB_PASSWORD=secret
+      - DB_PASSWORD=
     depends_on:
       - db
 
@@ -24,21 +25,24 @@ services:
     ports:
       - "3306:3306"
     environment:
-      - MYSQL_ROOT_PASSWORD=secret
+      - MYSQL_ROOT_PASSWORD=
       - MYSQL_DATABASE=school_management
     volumes:
       - mysql_data:/var/lib/mysql
       - ./database.sql:/docker-entrypoint-initdb.d/init.sql
 
   webserver:
-  image: nginx:alpine
-  ports:
-    - "80:80"
-  volumes:
-    - ./:/var/www
-    - ./docker/nginx:/etc/nginx/conf.d
-  depends_on:
-    - app
+    build:
+      context: ./web
+    image: webserver
+    container_name: webserver
+    ports:
+      - "80:80"
+    volumes:
+      - ./:/var/www
+      - ./docker/nginx:/etc/nginx/conf.d
+    depends_on:
+      - app
 
 volumes:
   mysql_data:
